# angles

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: angles.h
include/GLES/: egl.h  gl.h  glext.h  glplatform.h
include/GLES2/: gl2.h  gl2ext.h  gl2ext_angle.h
lib/macos/arm64/: libEGL.dylib
lib/macos/x86_64/: libEGL.dylib
